--- a/.github/workflows/build-zip.yml
+++ b/.github/workflows/build-zip.yml
@@ -3,25 +3,24 @@ name: Build Modpack ZIP
 on:
   push:
     branches:
-      - main  # sempre que você fizer push no main, o workflow roda
-  workflow_dispatch:  # permite rodar manualmente pelo GitHub
+      - main  # roda sempre que fizer push no branch main
+  workflow_dispatch: # permite rodar manualmente
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Passo 1: Checa o código do GitHub
+      # Baixar o repositório
       - name: Checar código
         uses: actions/checkout@v3
 
-      # Passo 2: Criar o ZIP do modpack
+      # Criar ZIP do modpack diretamente da raiz
       - name: Criar ZIP do modpack
         run: |
-          cd NexusSMP-Pack  # entre na pasta do modpack
-          zip -r ../NexusSMP-Pack.zip . -x ".git*" ".github/*"
+          zip -r NexusSMP-Pack.zip . -x ".git*" ".github/*"
 
-      # Passo 3: Salvar o ZIP como artefato
+      # Salvar ZIP como artefato
       - name: Salvar ZIP como artefato
         uses: actions/upload-artifact@v4
         with:
