--- a/.github/workflows/build-zip.yml
+++ b/.github/workflows/build-zip.yml
@@ -16,13 +16,16 @@ jobs:
         uses: actions/checkout@v3
 
       # Criar ZIP do modpack diretamente da raiz
+      # O comando zipa tudo (-r) a partir do diretório atual (.)
+      # e exclui (-x) as pastas .git, .github E o próprio arquivo .zip antigo
       - name: Criar ZIP do modpack
         run: |
-          zip -r NexusSMP-Pack.zip . -x ".git*" ".github/*"
+          zip -r NexusSMP-Pack.zip . -x ".git*" ".github/*" "NexusSMP-Pack.zip"
 
       # Salvar ZIP como artefato
       - name: Salvar ZIP como artefato
         uses: actions/upload-artifact@v4
         with:
-          name: NexusSMP-Pack
-          path: NexusSMP-Pack.zip
+          name: NexusSMP-Pack # Nome do artefato que aparecerá no GitHub
+          path: NexusSMP-Pack.zip # Caminho para o arquivo que deve ser salvo
+
